istio.yaml
apiVersion: v1
kind: List
metadata:
  name: right-lyrics-service-mesh
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: rl-gateway
  spec:
    selector:
      istio: ingressgateway
    servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "*"
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: rl-lyrics-page-virtual-service
  spec:
    hosts:
    - "*"
    gateways:
    - rl-gateway
    http:
    - route:
      - destination:
          host: rl-lyrics-page
          port:
            number: 8080
